Fix video on mobile

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -816,6 +816,9 @@ footer {
                 font-size: 31px;
             }
         }
+        .img {
+            min-height: 200px;
+        }
     }
     #menu {
         position: absolute;
